# koprogo

./: .ansible-lint  .env.vps.example  .gitignore  .gitleaks.toml  .yamllint  ACTUAL_STATUS.md  BACKEND_USER_ENDPOINTS_FIX.md  BRANCH_ANCESTRY.md  BUILDINGS_CRUD_COMPLETE.md  CHANGELOG.md  CHANGELOG_MULTI_ROLE.md  CLAUDE.md  CLAUDE_WEB_PROMPT.md  CODE_OF_CONDUCT.md  COMPILATION_FIXES.md  CONTRIBUTING.md  CREDITS.md  CRITICAL_ISSUES_ANALYSIS.md  DEPLOYMENT_VPS.md  FRONTEND_GAP_ANALYSIS.md  FRONTEND_INVENTORY.md  FRONTEND_PROGRESS_REPORT.md  FRONTEND_WIRING_COMPLETE.md  GAP_ANALYSIS.md  GOVERNANCE.md  Guide_Comptable_KoproGo.docx  Guide_Syndic_KoproGo.docx  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_STATUS_FINAL.md  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE_DEPLOYMENT_SUMMARY.md  LICENSE  MCP_INTEGRATION_SUMMARY.md  Makefile  ORGANIZATION_CRUD_FIX.md  PERFORMANCE_TESTING.md  PHASE2_SUMMARY.md  PLAN_ACTION_DECEMBRE_2025.md  README.md  SECURITY.md  (+19 more)
backend/: .env.example  .env.loadtest  .gitignore  Cargo.toml  DATABASE_CONSTRAINTS.md  Dockerfile  Dockerfile.dev  Dockerfile.production  README.rst  SESSION_SUMMARY.md  audit.toml  run-realistic-seed.sh  seed_now.sh  seed_via_api.py  validate_seed.sh
backend/.cargo/: audit.toml
backend/.sqlx/: query-00b1a1fff0a2e8a54ffa89f409d63715ab737acf97fc3c66fb07f4e789ff0307.json  query-0167dce3555c31e8873e19bd79e3cc06b93f61d073c30b36e20050481cf04ea6.json  query-02b1c205de11bfdf60d8c09bbd59492cc2ce20779214e2ce49fbd379664d62cc.json  query-046edc9abca159c3cfc80286cfb84235c1019a9afd2618ba15f9b2176823efa9.json  query-0557af9811bf37559ce840efe1b53b1703755095d279f3dafdbd3d6b152100a7.json  query-05812a53482d865a466834492b84cae4b0f9201013a9b51ec0e733d11ee86793.json  query-080ecef1e706dd63a8803d12cc9cc16e4b6c181d8d11ce60aed7403a38b72a2c.json  query-086a4e6c67c682da88130c7329fcec075e3a40109ff4dd302b7cc2c2fed704a0.json  query-08b5d8d4589510de0b54e58a95f77e6571ef922b0954d3b4c9b5c50bcdba87ca.json  query-09865b3bf880c6879692132644326b155310c264cdc5df23dd9abd942ffc5a3a.json  query-0a916a309ea6a1e0776d4971209ed0af73a0b8b1ba2b99896f61562747a7908f.json  query-0ac400efd1861c6e3f409189ed239573e461a4f854f00b5ea770f92d5f3d8179.json  query-0b1200ce6c8e5ab6d2ad541358a39cb1737c430666e8ea2f96c96294b72758ca.json  query-0d551752f0add6bbf1e4348d437440bdac0d74912092945b9e60f86b127b202e.json  query-0ddaed19015ca37bb3d7aeea5e16d48f13768ef3729e8e434b6209c681d64463.json  query-0f03887ed93f250ffe484dc192cb7073e08b6a293563cd9f4385cecd3b2b1f93.json  query-10d92bfb54a05ad24b0044eb260c839fef4bc991516b5248a5d914bcad617cca.json  query-13267df569ffed3e349589ce0ed3847b02ce4bf869f7dfa1e4cf105a9ce7e9ab.json  query-1357c67eb0f2f0b3262005c060dd4578f6435314387f3a508d95f733e0557ae4.json  query-14fd07e33ffab1b0d82455f7dd3ea243b48da13a8be493d43a454bfbf545e9df.json  query-159e12cb937feea72b63729fde7a466599929ff956d75366d892e8074cd0bbb5.json  query-15e9255783147fc40066de5d98e94bd999049a676b5ad5b009bfbe02985d61d6.json  query-1638661a2ca1797d4a0e5d8f06be6bb7ad4d3c70a8d8c26b7bd1562edf78a686.json  query-16d3283b629bbf062f7e56cab6d18393363638b194cc697b63029039489356ae.json  query-17a83aade92ef233420a0d333d0d3283f310488f9a40320e119349f6cada5868.json  query-18ec6603f486c2f4cf94c73b2d9efbf4b112a4a858ceb5b2869f909e9549732b.json  query-196253dfa7eda52e7ffcaed863c0466fb1c9456450e0783ea7c16d236b131ada.json  query-1a20bc488f55fa14968d3ba27e00d9c23918ffab51affa5549de949fdcb41e5a.json  query-1a8169ca3506769f476e1285771da14dda4b0946ec31d173fc4675146556ee3a.json  query-1abd52237d0b1a1c669b588ecb388708773a8670b50eed071b1cb2e70c8f1d42.json  query-1b69d241d9784e0bbf8adc141adb362c3c63a4ac914b4fa5200bcbaecaa07758.json  query-1bd01c50445cfc3c2eed4fce662ae6e0d90c57f4aa2e141e7cce42c6ea3c36d6.json  query-1c3277769b0d2e299ac5811ec974d1edaf5276b594e4ce97f942fd80ff02c3ca.json  query-1e2a35a0c535b137b78d2edd4e7d25d37b1ebed408352c43c0c38906f259dcba.json  query-1fa9de0874cc1022ace26e4d181a1c9fbaec3fc5023d88646a8515613b26e7f7.json  query-1feed5b49de76b8b95e6cdfb882ded5a5639e467162d1130187b09cb9fb4b250.json  query-209a44f6b4bffc85acaca6bc33e0234a62dd8d1a7136d907ea58aba35b20fc49.json  query-215683edd0f5536f28e92c672258ea7b78d02b5e869dce858f1ca1e3f7c96cb8.json  query-21b29251ecd01537c3898c415c864dba1507879e39a3903f21af0811834508c6.json  query-21dfe5b03ce1e3b1fd0b30371fbaa15fb596ab6c073c2b5958d92e97dafb6226.json  (+296 more)
backend/benches/: load_tests.rs
backend/docs/: JWT_SECURITY.md
backend/koprogo-mcp/: Cargo.toml  README.md
backend/koprogo-node/: Cargo.toml  Dockerfile.arm64  README.md
backend/migrations/: 20240101000000_create_extensions.sql  20240101000001_create_buildings.sql  20240101000002_create_owners.sql  20240101000003_create_units.sql  20240101000004_create_expenses.sql  20240101000005_create_meetings.sql  20240101000006_create_documents.sql  20250102000000_create_auth_and_multi_tenancy.sql  20250102000001_create_refresh_tokens.sql  20250103000000_add_organization_id_to_all_tables.sql  20250103000001_create_audit_logs.sql  20250103000002_disable_rls_policies.sql  20250103000003_add_performance_indexes.sql  20250127000000_refactor_owners_multitenancy.sql  20250130000000_add_user_roles.sql  20250202000000_create_mcp_tables.sql  20251027114912_add_is_seed_data_to_organizations.sql  20251030093406_add_retention_until_to_audit_logs.sql  20251030093756_add_gdpr_anonymization_fields.sql  20251030221800_add_total_tantiemes_to_buildings.sql  20251031000000_fix_superadmin_role.sql  20251031114200_add_user_id_to_owners.sql  20251101000001_add_board_member_role.sql  20251101000002_create_board_system.sql  20251101000003_add_missing_columns_to_board_tables.sql  20251104000001_enrich_expenses_invoice_workflow.sql  20251107000000_add_belgian_accounting_plan.sql  20251107120000_create_payment_reminders.sql  20251110140000_create_journal_entries_tables.sql  20251110140001_fix_journal_balance_trigger.sql  20251110140002_create_owner_contributions.sql  20251115000000_create_etats_dates.sql  (+55 more)
koprogo-grid/: .env.example  .gitignore  Cargo.toml  Dockerfile.node  Dockerfile.server  INSTALLATION.md  Makefile  README.md  SUMMARY.md  docker-compose.yml
(+3079 files in other folders)
