[package]
name = "koprogo-api"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
# Web framework
actix-web = "4.11"
actix-cors = "0.7"
actix-rt = "2.11"
actix-multipart = "0.7"
actix-governor = "0.10"

# Async runtime
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "time"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "migrate"] }

# Configuration
dotenvy = "0.15"

# Logging
env_logger = "0.11"
log = "0.4"

# Utilities
uuid = { version = "1.11", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.20", features = ["derive"] }
bcrypt = "0.17"
jsonwebtoken = { version = "10.1", default-features = false, features = ["aws_lc_rs"] }

# Async trait support
async-trait = "0.1"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Monitoring
once_cell = "1.19"
prometheus = "0.14"

# Cloud storage
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws-types = "1"
aws-credential-types = "1"

# PDF generation
printpdf = "0.7"

# Excel generation
rust_xlsxwriter = "0.90.2"

# Random data generation (for seed scripts)
rand = "0.9"
fake = { version = "4.4", features = ["derive", "chrono", "uuid", "http"] }

# Email
lettre = { version = "0.11", features = ["smtp-transport", "builder", "tokio1-native-tls"] }

[dev-dependencies]
# Unit & Integration tests
mockall = "0.13"
tokio-test = "0.4"
testcontainers-modules = { version = "0.13", features = ["postgres", "minio"] }

# BDD tests
cucumber = { version = "0.21", features = ["macros"] }

# E2E tests
reqwest = { version = "0.12", features = ["json"] }

# Load tests
criterion = { version = "0.7", features = ["async_tokio", "html_reports"] }

# Test utilities
serial_test = "3.1"
fake = { version = "4.4", features = ["derive", "chrono", "uuid"] }

[[bench]]
name = "load_tests"
harness = false

[[test]]
name = "bdd"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
