[package]
name = "koprogo-api"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
# Web framework
actix-web = "4.11"
actix-cors = "0.7"
actix-rt = "2.11"
actix-multipart = "0.7"
actix-governor = "0.10"

# Async runtime
tokio = { version = "1.50", features = ["macros", "rt-multi-thread", "time"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "migrate", "rust_decimal"] }
rust_decimal = "1.36"

# Configuration
dotenvy = "0.15"

# Logging (structured JSON logging - Issue #78)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-actix-web = "0.7"
log = "0.4" # Keep for compatibility with existing log! macros

# Utilities
uuid = { version = "1.23", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.20", features = ["derive"] }
bcrypt = "0.19"
jsonwebtoken = { version = "10.3", default-features = false, features = ["aws_lc_rs"] }
hex = "0.4"
sha2 = "0.10"
md5 = "0.8"

# Two-Factor Authentication (2FA)
totp-lite = "2.0"
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
aes-gcm = "0.10"
urlencoding = "2.1"

# Async trait support
async-trait = "0.1"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Monitoring
once_cell = "1.21"
prometheus = "0.14"

# Cloud storage
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws-types = "1"
aws-credential-types = "1"

# PDF generation
printpdf = "0.7"

# Excel generation
rust_xlsxwriter = "0.94.0"

# Random data generation (for seed scripts)
rand = "0.10"
fake = { version = "5.1", features = ["derive", "chrono", "uuid", "http"] }

# Email
lettre = { version = "0.11", features = ["smtp-transport", "builder", "tokio1-native-tls"] }

# HTTP client
reqwest = { version = "0.13", features = ["json", "form", "query"] }

# MQTT client (Home Assistant integration - IoT Phase 1)
rumqttc = { version = "0.25", default-features = false }

# OpenAPI documentation
utoipa = { version = "5.3", features = ["actix_extras", "chrono", "uuid", "decimal"] }
utoipa-swagger-ui = { version = "9.0", features = ["actix-web"] }

[dev-dependencies]
# Unit & Integration tests
mockall = "0.14"
tokio-test = "0.4"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres", "minio"] }
rust_decimal_macros = "1.36"

# BDD tests
cucumber = { version = "0.22", features = ["macros"] }

# E2E tests
reqwest = { version = "0.13", features = ["json"] }

# Load tests
criterion = { version = "0.8", features = ["async_tokio", "html_reports"] }

# Test utilities
serial_test = "3.1"
fake = { version = "5.1", features = ["derive", "chrono", "uuid"] }
[[bench]]
name = "load_tests"
harness = false

[[test]]
name = "bdd"
harness = false

[[test]]
name = "bdd_governance"
harness = false

[[test]]
name = "bdd_financial"
harness = false

[[test]]
name = "bdd_operations"
harness = false

[[test]]
name = "bdd_community"
harness = false

[[test]]
name = "bdd_iot"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
